--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,3 +114,83 @@
   color: white;
   border: 2px solid white;
 }
+
+.AllPlats{
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: space-around;
+  align-items: center;
+}
+.onePlat{
+  width: 30%;
+  border: 2px solid white;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 20px;
+}
+.FormPlats{
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+  margin: 10px auto;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.FormPlats input{
+  width: 50%;
+  margin: 20px 0;
+ height: 50px;
+ border: 0;
+ outline: 0;
+ background-color: aliceblue;
+ border-radius: 50px;
+ text-align: center;
+ font-size: 1.5rem;
+ color: black;
+ font-weight: bold;
+ font-style: italic;
+}
+.FormPlats button{
+  border: 0;
+  outline: 0;
+  background-color: white;
+  border-radius: 50px;
+  padding: 10px 20px;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 20px;
+}
+.FormPlats button:hover{
+  background-color: black;
+  color: white;
+  border: 2px solid white;
+}
+.FormPlats .taillePlats{
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+}
+.FormPlats .taillePlats label{
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-style: italic;
+}
+.FormPlats .taillePlats select{
+  width: 30%;
+  padding: 20px;
+  font-size: 1.5rem;
+  border: 0;
+  outline: 0;
+  text-align: center;
+  border-bottom: 2px solid white;
+  border-radius: 20px;
+}
+.FormPlats span{
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-style: italic;
+  margin: 20px 0;
+}
