--- a/client/src/App.css
+++ b/client/src/App.css
@@ -244,3 +244,26 @@
   background-color: red !important;
   color: white !important;
 }
+.plats{
+  justify-content: center;
+  margin-left: 20%;
+}
+.tableIngr{
+  width: 50% !important;
+}
+.clearSearch{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.clearSearch button{
+  margin-top: 0;
+  background-color: transparent;
+  width: 10%;
+}
+.clearSearch button:hover{
+  border: 0;
+}
+.clearSearch input{
+  width: 90%;
+}
